[tool.poetry]
name = "sinr"
version = "1"
description = ""
authors = ["Thibault Prouteau <thibault.prouteau@univ-lemans.fr>", "Nicolas Dugue <nicolas.dugue@univ-lemans.fr>"]

[tool.poetry.dependencies]
python = ">=3.8"
joblib = ">=1.1.1"
networkit = "9.1.1"
numpy = ">=1.21.0"
scipy = ">=1.6.1"
scikit-learn = "^1.2.1"
ipykernel = "^6.21.1"
jupyter = "^1.0.0"
tqdm = "^4.64.1"
pandas = "^1.5.3"
parallel-sort = "^0.1.0"
tabulate = "^0.9.0"
leidenalg = "^0.9.1"
igraph = "^0.10.4"

[tool.poetry.group.dev.dependencies]
nltk = "^3.8.1"
networkx = "^3.0"
cython = "^0.29.33"

