[build-system]
requires = [
  "poetry-core>=1.0.0a9",
  "Cython~=0.29.21",
  "setuptools~=67.1.0",
  "numpy~=1.24.2",
  "wheel"
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sinr"
version = "v1.3.2-beta"
description = "Build word and graph embeddings based on community detection in graphs."
authors = ["Thibault Prouteau <thibault.prouteau@univ-lemans.fr>", "Nicolas Dugue <nicolas.dugue@univ-lemans.fr>", " Simon Guillot <simon.guillot@univ-lemans.fr>", "Anthony Perez"]
license = "CeCILL 2.1"
homepage = "https://sinr-embeddings.github.io/sinr/_build/html/index.html"
repository = "https://github.com/SINr-Embeddings/sinr"
keywords = ["node embedding", "word embedding", "embedding", "graph embedding", "louvain", "community"]
classifiers = [
"Development Status :: 4 - Beta",
"Intended Audience :: Science/Research",
"License :: Other/Proprietary License",
"Operating System :: OS Independent",
"Programming Language :: Cython",
"Programming Language :: Python",
"Programming Language :: Python :: 3",
"Topic :: Software Development :: Libraries :: Python Modules",
"Topic :: Scientific/Engineering"
]
readme = "README.rst"
include = [
	"LICENCE",
	"./**/*.so"
]



[tool.poetry.dependencies]
python = ">=3.9,<4.0"
joblib = ">=1.1.1"
networkit = "9.1.1"
numpy = ">=1.26.0"
scipy = ">=1.6.1"
scikit-learn = "^1.2.1"
ipykernel = "^6.21.1"
tqdm = "^4.64.1"
pandas = ">=1.3.5"
tabulate = "^0.9.0"
leidenalg = "^0.9.1"
igraph = "^0.10.4"
matplotlib = "^3.7.0"
spacy = "^3.5.0"
xgboost = "^2.0.3"
docutils = "0.18.1" #To avoid problems, some of our dependencies relie on docutils and this version seems to be fine

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon", "sphinx-tabs"]


[tool.poetry.group.dev.dependencies]
nltk = "^3.8.1"
networkx = "<2.7"
cython = "^0.29.21"
pyment = "^0.3.3"
xgboost = "^2.0.3"
torch = "^1.13.1"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
sphinx-tabs = "^3.4.1"
plotly = "^5.13.1"




[tool.poetry.group.exp.dependencies]
openpyxl = "^3.1.2"

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry_bumpversion.file."sinr/__init__.py"]
